removing margin from body

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
   <title>Berlin Places</title>
   <script src="elm.js"></script>
 </head>
+
 <body>
   <style>
     body {
+      padding: 0;
       font-family: "Lato", sans-serif;
       font-weight: 400;
       line-height: 1.7;
@@ -17,7 +20,7 @@
   </style>
   <div id="elm-node"></div>
   <script>
-    var app = Elm.Main.init({ node: document.getElementById("elm-node")});
+    var app = Elm.Main.init({ node: document.getElementById("elm-node") });
   </script>
 </body>
 
