--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <style>
     body {
-      padding: 0;
+      margin: 0;
       font-family: "Lato", sans-serif;
       font-weight: 400;
       line-height: 1.7;
