--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-  <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="result-page.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/result-page.css">
+  <link rel="stylesheet" href="css/float-grid-system.css">
   <title>Berlin Places</title>
   <script src="elm.js"></script>
 </head>
